--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,9 @@ p {
     border: white dashed 1px;
     width: 250px;
     margin: 0 auto;
-    height: 300px;
+    height: 350px;
     margin-top: 50px;
+    position: relative;
 }
 #book {
     float: left;
@@ -24,4 +25,16 @@ p {
     position: absolute;
     top: 40px;
     left: 60px;
+}
+#man {
+    position: absolute;
+    height: 150px;
+    margin-left: 55px;
+    margin-top: 20px;
+}
+button {
+    position: absolute;
+    left: 78px;
+    visibility: hidden;
+    margin-top: 5px;
 }
